--- a/src/Interception/Interception.Abstractions/Interception.Abstractions.csproj
+++ b/src/Interception/Interception.Abstractions/Interception.Abstractions.csproj
@@ -6,4 +6,12 @@
     <RootNamespace>Dora.Interception</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Primitives\Primitives\Primitives.csproj" />
+  </ItemGroup>
+
 </Project>
