--- a/demo/WebApp/WebApp.csproj
+++ b/demo/WebApp/WebApp.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Interception\Interception\Interception.csproj" />
+    <ProjectReference Include="..\..\src\Interception\Interception.AspNetCore\Interception.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
