--- a/src/Interception/Interception.AspNetCore/Interception.AspNetCore.csproj
+++ b/src/Interception/Interception.AspNetCore/Interception.AspNetCore.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Interception.Abstractions\Interception.csproj" />
+    <ProjectReference Include="..\Interception\Interception.csproj" />
   </ItemGroup>
 
 </Project>
