Fix bug for inherited virtual method issue.

--- a/demo/Interception/App2/App2.csproj
+++ b/demo/Interception/App2/App2.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Work\flight.interception\src\Interception.AspNetCore\Interception.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\..\src\Interception\Interception.AspNetCore\Interception.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
