--- a/demo/Interception/S01/App/App.csproj
+++ b/demo/Interception/S01/App/App.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\Interception\Interception\Interception.csproj" />
+	  <PackageReference Include="Dora.Interception" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
   </ItemGroup>
 
 </Project>
