--- a/demo/Interception/S18X/App/App.csproj
+++ b/demo/Interception/S18X/App/App.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\Interception\Interception\Interception.csproj" />
+    <PackageReference Include="Dora.Interception" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
