--- a/demo/Interception/S24/App/App.csproj
+++ b/demo/Interception/S24/App/App.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\Interception\Interception\Interception.csproj" />
+    <PackageReference Include="Dora.Interception" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
