--- a/src/Interception/Interception/Interception.csproj
+++ b/src/Interception/Interception/Interception.csproj
@@ -8,8 +8,17 @@
     <AssemblyName>Dora.$(MSBuildProjectName)</AssemblyName>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	<Version>6.0.0</Version>
-	<PackageReleaseNotes>Fix interception suppression check bug.</PackageReleaseNotes>
+	<PackageReleaseNotes></PackageReleaseNotes>
 	<Description>A lightweight AOP framework built on .NET Dependency Injection and Roslyn based code generation.</Description>
+	<RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
+	<PackageTags>AOP, .NET, .NET Core, Roslyn, Code Generation</PackageTags>
+	<SignAssembly>True</SignAssembly>
+	<AssemblyOriginatorKeyFile>..\..\..\asset\Key.snk</AssemblyOriginatorKeyFile>
+	<Authors>Jiang Jin Nan</Authors>
+	<Company>Jiang Jin Nan</Company>
+	<Product>Dora</Product>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<Copyright>© Jiang Jin Nan. All rights reserved.</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
