--- a/src/Interception/Interception/Interception.csproj
+++ b/src/Interception/Interception/Interception.csproj
@@ -7,8 +7,8 @@
     <RootNamespace>Dora.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <AssemblyName>Dora.$(MSBuildProjectName)</AssemblyName>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	<Version>6.0.0</Version>
-	<PackageReleaseNotes></PackageReleaseNotes>
+	<Version>6.0.1</Version>
+	<PackageReleaseNotes>Fix bug for inherited method based interceptor registration.</PackageReleaseNotes>
 	<Description>A lightweight AOP framework built on .NET Dependency Injection and Roslyn based code generation.</Description>
 	<RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
 	<PackageTags>AOP, .NET, .NET Core, Roslyn, Code Generation</PackageTags>
