--- a/demo/OpenTelemetry/App2/App2.csproj
+++ b/demo/OpenTelemetry/App2/App2.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\OpenTelemetry\OpenTelemetry.AspNetCore\OpenTelemetry.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\..\src\OpenTelemetry\OpenTelemetry.OpenTelemetryProtocol\OpenTelemetry.OpenTelemetryProtocol.csproj" />
     <ProjectReference Include="..\..\..\src\OpenTelemetry\OpenTelemetry.Zipkin\OpenTelemetry.Zipkin.csproj" />
     <ProjectReference Include="..\..\..\src\OpenTelemetry\OpenTelemetry\OpenTelemetry.csproj" />
   </ItemGroup>
